Fix home button sizing and potential fix for joke list sizing on mobile

--- a/app/assets/stylesheets/components.scss
+++ b/app/assets/stylesheets/components.scss
@@ -51,7 +51,6 @@ button {
 }
 
 .home__btn-link {
-  width: 33%;
   text-decoration: none;
 }
 
@@ -94,8 +93,8 @@ button {
   transform: translate(-50%, -50%);
   border: 2px solid black;
   
-  width: 70%;
-  max-width: 600px;
+  width: 75%;
+  max-width: 400px;
   background: white;
   
   > .modal__form {
