--- a/app/assets/stylesheets/edit.scss
+++ b/app/assets/stylesheets/edit.scss
@@ -1,6 +1,7 @@
 .edit {
   display: flex;
   flex-direction: column;
+  flex: 1;
   overflow-y: auto;
   align-items: center;
 
