--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -3,6 +3,7 @@
   padding: 10px;
   
   display: flex;
+  flex-shrink: 0;
   justify-content: center;
   width: 100%;
 
